feat 회원가입 기능

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+## Spring datasource Setting (H2)
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/gtube;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
 
+# Spring datasource Setting (Mysql)
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://gtube.c7rshb4mqxyy.us-east-1.rds.amazonaws.com:3306?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#spring.datasource.username=hosh
+#spring.datasource.password=genesislab
+
+#JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.jpa.defer-datasource-initialization=true
+#spring.jpa.database=mysql
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+#log
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.type.descriptor.sql=trace
