--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,11 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+spring.profiles.include=oauth
+
 #log
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.type.descriptor.sql=trace
+
